# tricys

./: .env  .gitignore  .pre-commit-config.yaml  CRITICAL_FIXES.md  Dockerfile  Makefile  Makefile.bat  PR_REVIEW_COMMENTS.md  README.md  Start-up_Tritium_Inventory_figure.py  config.json  docker-compose.yml  find_min_TBR.py  mkdocs.yml  parameter_parser.py  pySimulation.py  pySimulationTBR.py  pyproject.toml  requirements.txt  run_simulation.py  show_figure.py  simulate_and_plot_inventory.py  simulation_ui.py  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build_publish.yml  build_test.yml  docker_publish.yml
CFEDR/: Blanket.mo  CPS.mo  Coolant_Pipe.mo  Cycle.mo  DIV.mo  FW.mo  Fueling_System.mo  I_ISS.mo  O_ISS.mo  Plasma.mo  Pump_System.mo  SDS.mo  TEP.mo  TES.mo  WDS.mo  package.mo  pulseFusion.mo
FFCAS/: Blanket.mo  CPS.mo  Coolant_Pipe.mo  Cycle.mo  DIV.mo  FW.mo  Fueling_System.mo  I_ISS.mo  O_ISS.mo  Plasma.mo  Pump_System.mo  SDS.mo  TEP_FCU.mo  TEP_FEP.mo  TEP_IP.mo  TES.mo  WDS.mo  package.mo
docker/: tricys_om_gui.dockerfile  tricys_om_ompython.dockerfile
docs/: TricysPlusUsersGuide.md  TricysUsersGuide.md
en/: index.html
example/: Blanket.mo  CPS.mo  Coolant_Pipe.mo  Cycle.mo  DIV.mo  FW.mo  Fueling_System.mo  I_ISS.mo  O_ISS.mo  Plasma.mo  Pump_System.mo  SDS.mo  TEP_FCU.mo  TEP_FEP.mo  TEP_IP.mo  TES.mo  WDS.mo  example_config.json  package.mo
example/analysis/: example_config_comb.json  example_config_normal.json  example_config_single.json  example_runner.json
example/basic/: example_runner.json
example/cli/: example_runner.json
example/example_aspenbkp/: _0232rmq.appdf  _0232rmq.def  _0232rmq.his  _0232rmq.inm  _0232rmq.jnl  _0232rmq.nin  _0232rmq.scr  _0232rmq.sin  _0232rmq.sum  _0631hoc.appdf  _0631hoc.def  _0631hoc.his  _0631hoc.ia1  _0631hoc.inm  _0631hoc.inx  _0631hoc.scr  _0631hoc.sin  _1131ymn.appdf  _1131ymn.def  _1131ymn.his  _1131ymn.in0  _1131ymn.nin  _1131ymn.scr  _1131ymn.sin  _1550baa.appdf  _1550baa.def  _1550baa.his  _1550baa.inm  _1550baa.inx  _1550baa.jnl  _1550baa.scr  _1550baa.sin  (+51 more)
script/: check_dirty.py
src/: __init__.py  config.py  file_utils.py  get_model_parameters.py  gui_main.py  model_parser.py  result_processor.py  simulation.py  update_sweep_values.py
temp/: blanket.T_blanket.TBR.csv  combined_simulation_results.csv
test/: test_db_utils.py  test_model_parser.py  test_om_utils.py  test_sim_utils.py  test_simulation.py  test_simulation_analysis.py  test_simulation_plus.py  test_single_simulation.py  test_sweep_simulation.py
tests/: test_model_parser.py  test_simulation.py
tricys/: __init__.py  main.py  simulation.py  simulation_analysis.py  simulation_gui.py  simulation_plus.py
(+153 files in other folders)
